29.sep (ws)
      - fix #1395: Accidental after a tied note
       (la)
      - fix #12085: Enharmonics not preserved when toggling concert pitch in part > 1 octave
20.sep (la)
      - fix pedal ending in midi export
        http://musescore.org/en/node/12642#comment-42743
6.sep (la)
      - fix 12218: shaped noteheads aren't shared
      - fix 12419: Ledger lines are still visible for invisible notes
3.sep (lv)
      - fix #12276: MusicXML import: sub-optimal handling of different duration measures
      (la)
      - fix #12394: Chordnames are not exported for grand staff
31.aug (lv)
      - added function to determine measure length, in preparation for fixing #12276
30.aug (lv)
      - refactored tick handling in MusicXML import, in preparation for fixing #12276
       (la)
      - fix #12161: Changing time signature should change autobeam properties
29.aug (la)
      - fix #12322: Exported parts close on command without a warning
21.aug (lv)
      - fix #11675: Crash opening MusicXML from Finale
        note: the attached file romance-1.zip still does not open correctly (probably a separate
        issue still to be investigated), but at least it does not crash due to the voice mapper
        anymore
18.aug (lv)
      - reworked MusicXML voice mapper
       (la)
      - fix bug on midi import
15.aug (la)
      - fix #12084: Crash when running transpose with title selected
      - fix #11926: Pedal marking created in 1.0 are displayed incorrectly in MuseScore 1.1
14.aug (la)
      - fix translation of context menu on keysig
      - apply patches from Toby Smithe (#12108)

10.aug (la)
      - fix #11927: MusicXML export duplicate chordnames
      - fix #11479: playback swing of quarter notes on counter beat

======== MuseScore 1.1 released ==============

23.jul (lv)
      - remove spurious "Unknown Node <staff>" or "... <voice>" messages on MusicXML import
      - disable unnecessary voice mapper debug message on MusicXML import
21.jul (la)