@@ -42,6 +42,7 @@ class ScoreView;
 class System;
 class Note;
 class Spacer;
+class AccidentalState;
 
 //---------------------------------------------------------
 //   MStaff
@@ -247,7 +248,7 @@ class Measure : public MeasureBase {
       void setMultiMeasure(int val)           { _multiMeasure = val;  }
       Fraction fraction() const;
 //      void layoutChords1(Segment* segment, int startTrack);
-      void layoutChords0(Segment* segment, int startTrack, char* tversatz);
+      void layoutChords0(Segment* segment, int startTrack, AccidentalState*);
       void writeTuplets(Xml&, int staff) const;
       };
 
