@@ -1,3 +1,5 @@
+30.sep (ws)
+      - fix regression #4157: Natural alfter a tie across barline
 29.sep (ws)
       - fix #1395: Accidental after a tied note
        (la)
